# openfang

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  branch.diff  flake.nix  openfang.toml.example
.github/workflows/: build-openfang-full-arm.yml  ci.yml  ghcr-dockerhub-amd64.yml  ghcr-dockerhub.yml  main.yml  release.yml
audit/: 00-executive-summary.md  01-trait-core-boundary.md  02-feature-gating.md  03-concurrency-safety.md  04-protocol-stability.md  05-composability.md  06-test-coverage.md  07-docs-contributor.md  08-dependency-chain.md  09-dx-ci-health.md  10-orchestration-daemon.md  11-dashboard-web-ui.md  12-error-handling.md  13-security-validation.md  14-documentation-integrity.md
crates/openfang-api/: Cargo.toml
crates/openfang-channels/: Cargo.toml
crates/openfang-channels/benches/: channel_bench.rs
crates/openfang-channels/src/: bluesky.rs  bridge.rs  dingtalk.rs  discord.rs  discourse.rs  email.rs  feishu.rs  flock.rs  formatter.rs  gitter.rs  google_chat.rs  gotify.rs  guilded.rs  keybase.rs  line.rs  linkedin.rs  mastodon.rs  matrix.rs  mattermost.rs  messenger.rs  nextcloud.rs  ntfy.rs  pumble.rs  reddit.rs  revolt.rs  rocketchat.rs  router.rs  signal.rs  slack.rs  teams.rs  telegram.rs  threema.rs  twist.rs  types.rs  viber.rs  webex.rs  webhook.rs  whatsapp.rs  zulip.rs
crates/openfang-cli/: Cargo.toml
crates/openfang-kernel/: Cargo.toml
docs/: README.md  architecture.md  channel-adapters.md  configuration.md  integration-platform-roadmap.md  issue_triage_2026-03-01.md  providers.md
scripts/: install.sh
(+123 files in other folders)
